--- a/receiver.html
+++ b/receiver.html
@@ -27,8 +27,8 @@ limitations under the License.
 	    border:0px solid silver;
 	    display: table-cell;
 	    vertical-align:middle;
-	    color:#FFFFFF;
-	    background-color:#000000;
+	    color:black;
+	    background-color:white;
 	    font-weight:bold;
 	    font-family:Verdana, Geneva, sans-serif;
 	    font-size:40px;
