--- a/receiver.html
+++ b/receiver.html
@@ -18,56 +18,57 @@ limitations under the License.
   <head>
     <style type="text/css">
 	  body {
-	    overflow:hidden;
+	    overflow: hidden;
 	  }
-      div{
-	    height:720PX;
-	    width:1280PX;
+    div {
+	    height: 720px;
+	    width: 640px;
 	    text-align:center;
-	    border:0px solid silver;
+	    border: 0;
 	    display: table-cell;
-	    vertical-align:middle;
-	    color:black;
-	    background-color:white;
-	    font-weight:bold;
-	    font-family:Verdana, Geneva, sans-serif;
-	    font-size:40px;
-	}
+	    vertical-align: middle;
+	    color: black;
+	    background-color: white;
+	    font-weight: bold;
+	    font-family: Verdana, Geneva, sans-serif;
+	    font-size: 40px;
+	  }
     </style>
     <title>Cast Hello Text</title>
   </head>
   <body>
-	<DIV id="message">Jan fecit.</DIV>
+  	<div id="message">Jan fecit.</div>
+    <div id="console">Loaded</div>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type="text/javascript">
       window.onload = function() {
         cast.receiver.logger.setLevelValue(0);
         window.castReceiverManager = cast.receiver.CastReceiverManager.getInstance();
-        console.log('Starting Receiver Manager');
+        log('Starting Receiver Manager');
 
         // handler for the 'ready' event
         castReceiverManager.onReady = function(event) {
-          console.log('Received Ready event: ' + JSON.stringify(event.data));
+          log('Received Ready event: ' + JSON.stringify(event.data));
           window.castReceiverManager.setApplicationState("Application status is ready...");
         };
 
         // handler for 'senderconnected' event
         castReceiverManager.onSenderConnected = function(event) {
-          console.log('Received Sender Connected event: ' + event.data);
-          console.log(window.castReceiverManager.getSender(event.data).userAgent);
+          log('Received Sender Connected event: ' + event.data);
+          log(window.castReceiverManager.getSender(event.data).userAgent);
         };
 
         // handler for 'senderdisconnected' event
         castReceiverManager.onSenderDisconnected = function(event) {
-          console.log('Received Sender Disconnected event: ' + event.data);
-          if (window.castReceiverManager.getSenders().length == 0) {
-	        window.close();
-	      }
+          log('Received Sender Disconnected event: ' + event.data);
+          if (window.castReceiverManager.getSenders().length === 0) {
+            window.close();
+          }
         };
 
         // handler for 'systemvolumechanged' event
         castReceiverManager.onSystemVolumeChanged = function(event) {
-          console.log('Received System Volume Changed event: ' + event.data['level'] + ' ' +
+          log('Received System Volume Changed event: ' + event.data['level'] + ' ' +
               event.data['muted']);
         };
 
@@ -78,25 +79,30 @@ limitations under the License.
 
         // handler for the CastMessageBus message event
         window.messageBus.onMessage = function(event) {
-          console.log('Message [' + event.senderId + ']: ' + event.data);
+          log('Message [' + event.senderId + ']: ' + event.data);
           // display the message from the sender
           displayText(event.data);
           // inform all senders on the CastMessageBus of the incoming message event
           // sender message listener will be invoked
           window.messageBus.send(event.senderId, event.data);
-        }
+        };
 
         // initialize the CastReceiverManager with an application status message
         window.castReceiverManager.start({statusText: "Application is starting"});
-        console.log('Receiver Manager started');
+        log('Receiver Manager started');
       };
 
       // utility function to display the text message in the input field
       function displayText(text) {
-        console.log(text);
+        log(text);
         document.getElementById("message").innerHTML=text;
         window.castReceiverManager.setApplicationState(text);
-      };
+      }
+
+      function log(text) {
+        var myConsole = document.getElementById("console");
+        myConsole.innerHTML = text + "\n" + myConsole.innerHTML;
+      }
     </script>
   </body>
 </html>
