better style for console

--- a/receiver.html
+++ b/receiver.html
@@ -21,18 +21,31 @@ limitations under the License.
 	    overflow: hidden;
 	  }
     div {
-	    height: 720px;
-	    width: 640px;
-	    text-align:center;
+	    height: 360px;
+	    width: 1280px;
 	    border: 0;
-	    display: table-cell;
 	    vertical-align: middle;
-	    color: black;
-	    background-color: white;
-	    font-weight: bold;
-	    font-family: Verdana, Geneva, sans-serif;
-	    font-size: 40px;
 	  }
+
+    div#message {
+      text-align: center;
+      display: table-cell;
+      vertical-align: middle;
+      color: black;
+      background-color: white;
+      font-weight: bold;
+      font-family: Verdana, Geneva, sans-serif;
+      font-size: 40px;
+    }
+
+    div#console {
+      text-align: left;
+      color: whitesmoke;
+      background-color: black;
+      font-weight: normal;
+      font-family: monospace;
+      font-size: 10px;
+    }
     </style>
     <title>Cast Hello Text</title>
   </head>
