--- a/receiver.html
+++ b/receiver.html
@@ -70,7 +70,7 @@ limitations under the License.
           }
           else {
             log("Stored state: " + JSON.stringify(storedState));
-            displayText(storedState.text);
+            displayText(storedState);
           }
         };
 
@@ -117,7 +117,7 @@ limitations under the License.
       // utility function to display the text message in the input field
       function displayText(text) {
         log(text);
-        localStorage.setItem(localStorageKey, {text: text});
+        localStorage.setItem(localStorageKey, text);
         document.getElementById("message").innerHTML = text;
         window.castReceiverManager.setApplicationState(text);
       }
